--- a/HTML/Boostrap mundo today/form.html
+++ b/HTML/Boostrap mundo today/form.html
@@ -6,71 +6,126 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
+  <link href="main.css" rel="stylesheet">
   <!-- Latest compiled JavaScript -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
-<body class="bg-primary">
-  <div class="row justify-content-center mt-5">
-    <div class="col-sm-4">
-      <div class="card">
-        <div class="card-header text-center p-5">
-          <h4>Create Account</h4>
+<body>
+
+  <a href="index.html"><button type="submit" class="btn btn-muted">Volver al index</button></a>
+
+  <div class="container">
+    <div class="row">
+      <h2 class="text-center">Has elegido sub mensual 3€/mes</h2>
+    </div>
+    <hr>
+    <form class="was-validated">
+      <div class="row">
+        <div class="col-12 m-2">
+          <label for="email" class="form-label">Username:</label>
+          <input type="text" class="form-control" placeholder="Enter username" required>
+          <div class="valid-feedback">Valid.</div>
+          <div class="invalid-feedback">Please fill out this field.</div>
         </div>
-        <div class="card-body">
-          <form class="was-validated">
-            <div class="row">
-
-
-              <div class="col-sm-6">
-                <label for="email" class="form-label">First name:</label>
-                <input type="text" class="form-control" placeholder="First name">
-              </div>
-
-              <div class="col-sm-6">
-                <label for="email" class="form-label">Last name:</label>
-                <input type="text" class="form-control" placeholder="Last name">
-              </div>
-            </div>
-            <div>
-              <label for="email" class="form-label">Email:</label>
-              <input type="email" class="form-control" placeholder="Enter email">
-            </div>
-            <div class="row">
-
-              <div class="col-sm-6">
-                <label for="email" class="form-label">Password:</label>
-                <input type="password" class="form-control" placeholder="Password" required>
-                <div class="valid-feedback">Valid.</div>
-                <div class="invalid-feedback">Please fill out this field.</div>
-              </div>
-
-              <div class="col-sm-6">
-                <label for="email" class="form-label">Confirm Password:</label>
-                <input type="password" class="form-control" placeholder="Confirm Password" required>
-                <div class="valid-feedback">Valid.</div>
-                <div class="invalid-feedback">Please fill out this field.</div>
-              </div>
-            </div>
-            <div>
-          </form>
-          <div class="row">
-            <div><button type="button" class="btn btn-primary my-3 col-12">Create acc</button>
-            </div>
-          </div>
+        <div class="col-12 m-2">
+          <label for="email" class="form-label">Password:</label>
+          <input type="password" class="form-control" placeholder="Enter password" required>
+          <div class="valid-feedback">Valid.</div>
+          <div class="invalid-feedback">Please fill out this field.</div>
         </div>
-        <div class="card-footer text-center">
-          <a href="login.html">Have an acc? Go to login!</a>
+        <div class="col-12 m-2">
+          <label for="email" class="form-label">Confirm Password:</label>
+          <input type="password" class="form-control" placeholder="Confirm Password" required>
+          <div class="valid-feedback">Valid.</div>
+          <div class="invalid-feedback">Please fill out this field.</div>
+        </div>
+        <div class="col-12 m-2">
+          <label for="email" class="form-label">Email:</label>
+          <input type="email" class="form-control" placeholder="Enter email" required>
+          <div class="valid-feedback">Valid.</div>
+          <div class="invalid-feedback">Please fill out this field.</div>
+        </div>
+        <div class="col-12 m-2">
+          <label for="email" class="form-label">Confirm Email:</label>
+          <input type="email" class="form-control" placeholder="Confirm Email" required>
+          <div class="valid-feedback">Valid.</div>
+          <div class="invalid-feedback">Please fill out this field.</div>
         </div>
       </div>
+    </form>
+
+    <div class="row my-5">
+      <div class="bg-custom">
+        <h3>Información de pago</h3>
+        <p>Aceptamos visa y mastercard</p>
+        <form>
+          <div class="row my-3">
+            <div class="col-12">
+              <label for="email" class="form-label">Numero de tarjeta:</label>
+              <input type="text" class="form-control" placeholder="1234 1234 1234 1234">
+            </div>
+            <div class="col-6">
+              <label for="email" class="form-label">Fecha de expiracion:</label>
+              <input type="text" class="form-control" placeholder="MM / AA">
+            </div>
+            <div class="col-6">
+              <label for="email" class="form-label">CVC:</label>
+              <input type="text" class="form-control" placeholder="CVC">
+            </div>
+            <div class="col-12 my-3">
+              <img src="media/unknown.png" alt="" style="max-width: 200px; display: inline;">
+            </div>
+            <div class="col-3">
+              <label for="email" class="form-label">Cupon de descuento:</label>
+              <input type="text" class="form-control" placeholder="Cupon">
+            </div>
+            <a href="index.html"><button type="submit" class="btn btn-muted">Aplicar</button></a>
+          </div>
+        </form>
+      </div>
     </div>
+
+    <div class="row my-5">
+      <div class="bg-custom2">
+        <h5>Suscribete a nuestra newsletter</h5>
+      </div>
+      <div class="form-check bg-custom">
+        <input class="form-check-input" type="checkbox" id="check1" name="option1" value="something">
+        <label class="form-check-label">EL MUNDO TODAY</label>
+      </div>
+    </div>
+    <form>
+      <button type="submit" class="btn p-4 my-2 btn-dark" style="font-weight: 700;">Enviar y Pagar >></button>
+    </form>
   </div>
+
   <footer>
-    <div class="container-fluid bg-white p-4 fixed-bottom">
+    <div class="container-fluid bg-black">
       <div class="row">
-        <div class="col">Copyright © Your Website</div>
-        <div class="col text-end">Privacy Policy</div>
+        <div class="col-2 mx-auto">
+          <i class="fa-brands fa-facebook-f p-4 iconos"></i>
+          <i class="fa-brands fa-instagram p-4 iconos"></i>
+          <i class="fa-brands fa-twitter p-4 iconos"></i>
+          <i class="fa-brands fa-youtube p-4 iconos"></i>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-6 mx-auto">
+          <img src="media/emt-logo-blanco-homogeneo.png" alt="" style="display: block; max-width: 300px; margin: auto;">
+          <p class="text-white d-block text-center mt-3">© El Mundo Today</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12 text-center">
+          <a class="text-white d-inline-block p-3" href="#">Cookies</a>
+          <a class="text-white d-inline-block p-3" href="#">Privacidad</a>
+          <a class="text-white d-inline-block p-3" href="#">Contacto</a>
+          <a class="text-white d-inline-block p-3" href="#">Tienda</a>
+        </div>
+      </div>
+      <div class="row">
+        <img src="media/icm-logo-1.png" alt="" style="display: block; max-width: 150px; margin: auto;">
       </div>
     </div>
   </footer>
