--- a/HTML/Boostrap mundo today/index.html
+++ b/HTML/Boostrap mundo today/index.html
@@ -2,155 +2,193 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- Latest compiled and minified CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- Latest compiled JavaScript -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-  <title>Mundo Today</title>
-  <!-- CODIGO DEL FONT AWESOME -->
-  <script src="https://kit.fontawesome.com/30023d5fd6.js" crossorigin="anonymous"></script>
-  <link href="main.css" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Latest compiled and minified CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Latest compiled JavaScript -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <title>Mundo Today</title>
+    <!-- CODIGO DEL FONT AWESOME -->
+    <script src="https://kit.fontawesome.com/30023d5fd6.js" crossorigin="anonymous"></script>
+    <link href="main.css" rel="stylesheet">
 </head>
 
 <body>
-  <div class="bg-light">
+
     <div class="container mx-auto">
-      <div class="row d-flex align-items-center">
-        <div class="col-3 ps-5">
-          <i class="fa-brands fa-facebook-f p-1 iconos"></i>
-          <i class="fa-brands fa-instagram p-1 iconos"></i>
-          <i class="fa-brands fa-twitter p-1 iconos"></i>
-          <i class="fa-brands fa-youtube p-1 iconos"></i>
-        </div>
+        <div class="row d-flex align-items-center">
+            <div class="col-3 ps-5">
+                <i class="fa-brands fa-facebook-f p-1 iconos"></i>
+                <i class="fa-brands fa-instagram p-1 iconos"></i>
+                <i class="fa-brands fa-twitter p-1 iconos"></i>
+                <i class="fa-brands fa-youtube p-1 iconos"></i>
+            </div>
 
-        <div class="col-6">
-          <img src="media/logo.png" class="img-fluid" height="75" alt="">
-        </div>
+            <div class="col-6">
+                <img src="media/logo.png" class="img-fluid" height="75" alt="">
+            </div>
 
-        <div class="col-3 mt-3">
-          <a href="#" class="text-dark d-none d-sm-inline d-sm-none d-md-inline d-md-none d-lg-inline"
-            style="text-decoration: none;">Iniciar sesión</a>
-          <a href="form.html" class="btn btn-info justify-content-end ms-3 text-dark">Hazte suscriptor</a>
+            <div class="col-3 mt-3">
+                <a href="#" class="text-dark d-none d-sm-inline d-sm-none d-md-inline d-md-none d-lg-inline"
+                    style="text-decoration: none;">Iniciar sesión</a>
+                <a href="form.html" class="btn btn-info justify-content-end ms-3 text-dark">Hazte suscriptor</a>
+            </div>
         </div>
-      </div>
     </div>
 
     <p style="background-color: orange; text-align: center; color: white; text-transform: uppercase;" class="mt-3">-
-      La actualidad del mañana -</p>
+        La actualidad del mañana -</p>
     <nav class="navbar sticky-top navbar-expand-md bg-light justify-content-center navbar-light">
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="collapsibleNavbar">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="#">Internacional</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">España</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Deportes</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Cultura</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Sociedad</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Ciencia y Tecnolog&iacute;a</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Gente</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Deportes</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">V&iacute;deos</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Tienda</a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Ropa</a></li>
-              <li><a class="dropdown-item" href="#">Coches</a></li>
-              <li><a class="dropdown-item" href="#">Casas</a></li>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="collapsibleNavbar">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Internacional</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">España</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Deportes</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Cultura</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Sociedad</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Ciencia y Tecnolog&iacute;a</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Gente</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Deportes</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">V&iacute;deos</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Tienda</a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="#">Ropa</a></li>
+                        <li><a class="dropdown-item" href="#">Coches</a></li>
+                        <li><a class="dropdown-item" href="#">Casas</a></li>
+                    </ul>
+                </li>
             </ul>
-          </li>
-        </ul>
-      </div>
+        </div>
     </nav>
-  </div>
 
-  <div class="container">
-    <div class="row">
-      <div class="card col-md-12 mb-4">
-        <img class="card-img-top" src="media/mascamas-696x464.jpg" alt="Card image">
-        <div class="card-body">
-          <h4 class="card-title">Un hombre desata la septima ola de la pandemia por ir al baño del restaurante sin
-            mascarilla</h4>
-          <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vel voluptas quae mollitia
-            nesciunt. Eum, assumenda asperiores necessitatibus obcaecati blanditiis tempore dolores nesciunt eos
-            consequatur non! Ipsam quia quae dolore doloribus?</p>
+
+    <div class="container">
+        <div class="row">
+            <div class="card col-md-12 mb-4">
+                <img class="card-img-top" src="media/mascamas-696x464.jpg" alt="Card image">
+                <div class="card-body">
+                    <h4 class="card-title">Un hombre desata la septima ola de la pandemia por ir al baño del restaurante
+                        sin
+                        mascarilla</h4>
+                    <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vel voluptas quae
+                        mollitia
+                        nesciunt. Eum, assumenda asperiores necessitatibus obcaecati blanditiis tempore dolores nesciunt
+                        eos
+                        consequatur non! Ipsam quia quae dolore doloribus?</p>
+                </div>
+            </div>
+            <div class="card col-md-6">
+                <img class="card-img-top" src="media/adcd-324x160.jpg" alt="Card image">
+                <div class="card-body">
+                    <h4 class="card-title">Conciertos de ACDC para disl&eacute;xicos</h4>
+                    <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vel voluptas quae
+                        mollitia
+                        nesciunt. Eum, assumenda asperiores necessitatibus obcaecati blanditiis tempore dolores nesciunt
+                        eos
+                        consequatur non! Ipsam quia quae dolore doloribus?</p>
+                </div>
+            </div>
+            <div class="card col-md-6">
+                <img class="card-img-top" src="media/horoscopos-324x160.jpg" alt="Card image">
+                <div class="card-body">
+                    <h4 class="card-title">Hor&oacute;scopo se descubre que no es real</h4>
+                    <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vel voluptas quae
+                        mollitia
+                        nesciunt. Eum, assumenda asperiores necessitatibus obcaecati blanditiis tempore dolores nesciunt
+                        eos
+                        consequatur non! Ipsam quia quae dolore doloribus?</p>
+                </div>
+            </div>
+            <div class="card col-md-12 my-4">
+                <img class="card-img-top" src="media/iStock-1290775346-324x160.jpg" alt="Card image">
+                <div class="card-body">
+                    <h4 class="card-title">Tu cuñado está destruyendo el planeta y no lo sabes</h4>
+                    <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vel voluptas quae
+                        mollitia
+                        nesciunt. Eum, assumenda asperiores necessitatibus obcaecati blanditiis tempore dolores nesciunt
+                        eos
+                        consequatur non! Ipsam quia quae dolore doloribus?</p>
+                </div>
+            </div>
+            <div class="card col-md-6">
+                <img class="card-img-top" src="media/iStock-172296647-324x160.jpg" alt="Card image">
+                <div class="card-body">
+                    <h4 class="card-title">¿C&oacute;mo saber si tu compañero de piso es un esp&iacute;a?</h4>
+                    <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vel voluptas quae
+                        mollitia
+                        nesciunt. Eum, assumenda asperiores necessitatibus obcaecati blanditiis tempore dolores nesciunt
+                        eos
+                        consequatur non! Ipsam quia quae dolore doloribus?</p>
+                </div>
+            </div>
+            <div class="card col-md-6">
+                <img class="card-img-top" src="media/iStock-696446076-324x160.jpg" alt="Card image">
+                <div class="card-body">
+                    <h4 class="card-title">Ciego pide 30 aut&oacute;grafos al oler la colonia de Antonio Banderas</h4>
+                    <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vel voluptas quae
+                        mollitia
+                        nesciunt. Eum, assumenda asperiores necessitatibus obcaecati blanditiis tempore dolores nesciunt
+                        eos
+                        consequatur non! Ipsam quia quae dolore doloribus?</p>
+                </div>
+            </div>
         </div>
-      </div>
-      <div class="card col-md-6">
-        <img class="card-img-top" src="media/adcd-324x160.jpg" alt="Card image">
-        <div class="card-body">
-          <h4 class="card-title">Un hombre desata la septima ola de la pandemia por ir al baño del restaurante sin
-            mascarilla</h4>
-          <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vel voluptas quae mollitia
-            nesciunt. Eum, assumenda asperiores necessitatibus obcaecati blanditiis tempore dolores nesciunt eos
-            consequatur non! Ipsam quia quae dolore doloribus?</p>
-        </div>
-      </div>
-      <div class="card col-md-6">
-        <img class="card-img-top" src="media/horoscopos-324x160.jpg" alt="Card image">
-        <div class="card-body">
-          <h4 class="card-title">Un hombre desata la septima ola de la pandemia por ir al baño del restaurante sin
-            mascarilla</h4>
-          <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vel voluptas quae mollitia
-            nesciunt. Eum, assumenda asperiores necessitatibus obcaecati blanditiis tempore dolores nesciunt eos
-            consequatur non! Ipsam quia quae dolore doloribus?</p>
-        </div>
-      </div>
-      <div class="card col-md-12 my-4">
-        <img class="card-img-top" src="media/iStock-1290775346-324x160.jpg" alt="Card image">
-        <div class="card-body">
-          <h4 class="card-title">Un hombre desata la septima ola de la pandemia por ir al baño del restaurante sin
-            mascarilla</h4>
-          <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vel voluptas quae mollitia
-            nesciunt. Eum, assumenda asperiores necessitatibus obcaecati blanditiis tempore dolores nesciunt eos
-            consequatur non! Ipsam quia quae dolore doloribus?</p>
-        </div>
-      </div>
-      <div class="card col-md-6">
-        <img class="card-img-top" src="media/iStock-172296647-324x160.jpg" alt="Card image">
-        <div class="card-body">
-          <h4 class="card-title">Un hombre desata la septima ola de la pandemia por ir al baño del restaurante sin
-            mascarilla</h4>
-          <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vel voluptas quae mollitia
-            nesciunt. Eum, assumenda asperiores necessitatibus obcaecati blanditiis tempore dolores nesciunt eos
-            consequatur non! Ipsam quia quae dolore doloribus?</p>
-        </div>
-      </div>
-      <div class="card col-md-6">
-        <img class="card-img-top" src="media/iStock-696446076-324x160.jpg" alt="Card image">
-        <div class="card-body">
-          <h4 class="card-title">Un hombre desata la septima ola de la pandemia por ir al baño del restaurante sin
-            mascarilla</h4>
-          <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vel voluptas quae mollitia
-            nesciunt. Eum, assumenda asperiores necessitatibus obcaecati blanditiis tempore dolores nesciunt eos
-            consequatur non! Ipsam quia quae dolore doloribus?</p>
-        </div>
-      </div>
     </div>
-  </div>
+
+    <footer>
+        <div class="container-fluid bg-black">
+            <div class="row">
+                <div class="col-2 mx-auto">
+                    <i class="fa-brands fa-facebook-f p-4 iconos"></i>
+                    <i class="fa-brands fa-instagram p-4 iconos"></i>
+                    <i class="fa-brands fa-twitter p-4 iconos"></i>
+                    <i class="fa-brands fa-youtube p-4 iconos"></i>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-6 mx-auto">
+                   <img src="media/emt-logo-blanco-homogeneo.png" alt="" style="display: block; max-width: 300px; margin: auto;">
+                   <p class="text-white d-block text-center mt-3">© El Mundo Today</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12 text-center">
+                   <a class="text-white d-inline-block p-3" href="#">Cookies</a>
+                   <a class="text-white d-inline-block p-3" href="#">Privacidad</a>
+                   <a class="text-white d-inline-block p-3" href="#">Contacto</a>
+                   <a class="text-white d-inline-block p-3" href="#">Tienda</a>
+                </div>
+            </div>
+            <div class="row">
+                <img src="media/icm-logo-1.png" alt="" style="display: block; max-width: 150px; margin: auto;">
+            </div>
+        </div>
+    </footer>
 
 </body>
 
